# testmo-mcp

./: .env.example  .gitignore  API_COVERAGE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/mcp_testmo/: __init__.py  client.py  config.py  server.py  utils.py
src/mcp_testmo/tools/: __init__.py  attachments.py  automation_runs.py  automation_sources.py  base.py  cases.py  composite.py  folders.py  issues.py  milestones.py  projects.py  run_results.py  runs.py  utility.py
tests/: __init__.py  conftest.py  test_client.py  test_composite.py  test_server.py
