[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-testmo"
version = "1.0.0"
description = "MCP Server for Testmo Test Management - AI-powered test case management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nanovest QA Team" }
]
keywords = [
    "mcp",
    "testmo",
    "test-management",
    "qa",
    "testing",
    "ai",
    "claude"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-testmo = "mcp_testmo.server:main"

[project.urls]
Repository = "https://github.com/if413019/testmo-mcp"
Documentation = "https://github.com/if413019/testmo-mcp#readme"
Issues = "https://github.com/if413019/testmo-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_testmo"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
